--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<h1>Html Basics</h1>
   <h3>Common Elements</h3>
 	<ul>
-		<li><a href="heading%20tags.html" target="_blank">Heading Tags</li>
-		<li><a href="quotation and citation tags.html" target="_blank">Quoatation and Citation Tags</li>
-		<li><a href="Comments.html" target="_blank">Comments</li>
-		<li><a href="attributes.html" target="_blank">Attributes</li>
-  	<li><a href="Styling using Color Attributes.html" target="_blank">Styling</li>
+		<li><a href="./heading%20tags.html" target="_blank">Heading Tags</a></li>
+		<li><a href="./quotation and citation tags.html" target="_blank">Quoatation and Citation Tags</a></li>
+		<li><a href="./Comments.html" target="_blank">Comments</a></li>
+		<li><a href="./attributes.html" target="_blank">Attributes</a></li>
+  	<li><a href="./Styling using Color Attributes.html" target="_blank">Styling</a></li>
 	</ul>
 	<br>
 	<h3>Example for ordered list (1234):</h3>
