--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<h1>Html Basics</h1>
   <h3>Common Elements</h3>
 	<ul>
-		<li><a href="./H01%20-%20heading%20tags.html" target="_blank">Heading Tags</a></li>
-		<li><a href="./H02%20-%20quotation%20and%20citation%20tags.html" target="_blank">Quoatation and Citation Tags</a></li>
-		<li><a href="./H03%20-%20Comments.html" target="_blank">Comments</a></li>
-		<li><a href="./H04%20-%20attributes.html" target="_blank">Attributes</a></li>
-  	<li><a href="./H05%20-%20Styling%20using%20Color%20Attributes.html" target="_blank">Styling</a></li>
+		<li><a href="./H01 - heading tags.html" target="_blank">Heading Tags</a></li>
+		<li><a href="./H02 - quotation and citation tags.html" target="_blank">Quoatation and Citation Tags</a></li>
+		<li><a href="./H03 - Comments.html" target="_blank">Comments</a></li>
+		<li><a href="./H04 - attributes.html" target="_blank">Attributes</a></li>
+  	<li><a href="./H05 - Styling using Color Attributes.html" target="_blank">Styling</a></li>
 	</ul>
 	<br>
 	<h3>Example for ordered list (1234):</h3>
